[package]
authors = ["Ana Gelez <ana@gelez.xyz>"]
name = "webfinger"
version = "0.5.0"
description = "A crate to help you fetch and serve WebFinger resources"
repository = "https://github.com/Plume-org/webfinger"
readme = "README.md"
keywords = ["webfinger", "federation", "decentralization"]
categories = ["web-programming"]
license = "GPL-3.0"
edition = "2018"

[features]
default = []
async = ["async-trait"]

[dependencies]
reqwest = { version = "0.10", features = [ "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
async-trait = {version = "*", optional = true}

[dev-dependencies]
serde_json = "1.0"
mockito = "0.23"
tokio = { version = "1.19.2", features = [ "full" ] }
