[package]
authors = ["Ana Gelez <ana@gelez.xyz>"]
name = "webfinger"
version = "0.6.0"
description = "A crate to help you fetch and serve WebFinger resources"
repository = "https://github.com/Plume-org/webfinger"
readme = "README.md"
keywords = ["webfinger", "federation", "decentralization"]
categories = ["web-programming"]
license = "GPL-3.0"
edition = "2021"

[features]
default = ["fetch"]
async = ["async-trait"]
fetch = ["dep:reqwest"]

[dependencies]
reqwest = { version = "0.11.12", features = ["json"], optional = true }
serde = { version = "1.0.147", features = ["derive"] }
async-trait = { version = "0.1.58", optional = true }

[dev-dependencies]
serde_json = "1.0.87"
mockito = "0.31.0"
tokio = { version = "1.21.2", features = ["full"] }
